Optimize simulation, rendering, and packet processing